--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11048],[[4,5,6,0,[],[1,37,11010],[],[[7,0,0,[],[1,3011,2118],[]],[8,0,0,[],[1,5129,4738],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16173],[[4,5,6,0,[],[1,18,8103],[],[[7,0,0,[],[1,649,2112],[]],[8,0,0,[],[1,2762,4799],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,8123,8048],[],[[12,0,0,[],[1,8640,6972],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/tmalin/webcounter/src/tests","*src/tests","*Increment","*/home/tmalin/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/tmalin/webcounter/src/tests","*src/tests","*Increment","*/home/tmalin/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/tmalin/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731937152751;
+window.output["baseMillis"] = 1731954784386;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11051;
+window.output["generated"] = 16182;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
