--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,1617],[[4,5,6,0,[],[1,18,980],[],[[7,0,0,[],[1,717,65],[]],[8,0,0,[],[1,783,155],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,999,617],[],[[12,0,0,[],[1,1306,247],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1984],[[4,5,6,0,[],[1,18,722],[],[[7,0,0,[],[1,452,72],[]],[8,0,0,[],[1,525,155],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,741,642],[],[[12,0,0,[],[1,1043,280],[]]],[],[1,1,0,0]],[13,14,15,0,[],[1,1384,599],[],[[16,0,0,[],[1,1685,237],[]]],[],[1,1,0,0]]],[],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/tmalin/webcounter/src/tests","*src/tests","*Increment","*/home/tmalin/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/tmalin/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/tmalin/webcounter/src/tests","*src/tests","*Increment","*/home/tmalin/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/tmalin/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero","*Set","*/home/tmalin/webcounter/src/tests/set.robot","*src/tests/set.robot","*Counter can be set to given value"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s3","label":"Tests.Set","name":"Set","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731958028188;
+window.output["baseMillis"] = 1732032527838;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1622;
+window.output["generated"] = 1989;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
